--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/events/JSModelEvent.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/events/JSModelEvent.vm
@@ -8,10 +8,12 @@ import ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.eve
 
 public class ModelEvent(val sourcePath : String?, val etype : EventType , val elementAttributeType : ElementAttributeType, val elementAttributeName: String, val value : Any?) {
 
-public enum class EventType {
+public class EventType {
     set
     add
     remove
+    addAll
+    removeAll
 }
 public enum class  ElementAttributeType{
     Attribute
