--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
@@ -31,7 +31,7 @@ fun getRefInParent() : String?
 fun findByPath(query : String) : Any?
 fun path() : String?
 
-fun reflexiveSetters(method : String, value : Any?)
+fun reflexiveMutator(mutatorType : String,refName : String, value : Any?)
 
 #if(${ctx.jS})
 #else
