--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/JSONResolveCommand.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/commands/JSONResolveCommand.vm
@@ -23,6 +23,6 @@ public class JSONResolveCommand(val context : LoadingContext, val target : ${hel
             }
         }
 
-        throw Exception("KMF Load error : reference " + ref + " not found in map when trying to "+method+" on " + target.toString())
+        throw Exception("KMF Load error : reference " + ref + " not found in map when trying to " + mutatorType + " "+refName+" on " + target.toString())
     }
 }
