--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -20,7 +20,7 @@ trait ${formatedFactoryName}Impl {
     internal open var internal_recursive_readOnlyElem : Boolean
 
     open fun setRecursiveReadOnly()
-    open fun reflexiveSetters(method : String, value : Any?)
+    open fun reflexiveMutator(mutatorType : String,refName : String, value : Any?)
 
     fun setInternalReadOnly(){
         internal_readOnlyElem = true
