Considering multiple attributes as Key of a model element. Partialy addresses #34, but needs the `findById` method to be completed to allow searching by specification of each key element, rather that by the lexicographic concatenation of attributes values.

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/events/JSModelEvent.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/events/JSModelEvent.vm
@@ -8,7 +8,7 @@ import ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.eve
 
 public class ModelEvent(val sourcePath : String?, val etype : EventType , val elementAttributeType : ElementAttributeType, val elementAttributeName: String, val value : Any?) {
 
-public class EventType {
+public enum class EventType {
     set
     add
     remove
