cleanup trace generator from elem

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
@@ -31,6 +31,8 @@ fun getRefInParent() : String?
 fun findByPath(query : String) : Any?
 fun path() : String?
 
+fun metaClassName() : String
+
 fun reflexiveMutator(mutatorType : String,refName : String, value : Any?)
 
 #if(${ctx.jS})
