--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerJAPI.vm
@@ -16,6 +16,8 @@ public ${formatedFactoryName} eContainer();
 
 public String getRefInParent();
 
+@org.jetbrains.annotations.NotNull
+public String metaClassName();
 
 @org.jetbrains.annotations.NotNull
 public boolean isReadOnly();
