Changed Enum values in Abstract classes with final attributes. Moved EventTypes from event package to util.ActionType

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
@@ -33,7 +33,7 @@ fun path() : String?
 
 fun metaClassName() : String
 
-fun reflexiveMutator(mutatorType : String,refName : String, value : Any?)
+fun reflexiveMutator(mutatorType : Int, refName : String, value : Any?)
 
 #if(${ctx.jS})
 #else
