Update of events on id attribute change.

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/util/ActionType.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/util/ActionType.vm
@@ -9,5 +9,5 @@ public static final int ADD = 1;
 public static final int REMOVE = 2;
 public static final int ADD_ALL = 3;
 public static final int REMOVE_ALL = 4;
-
+public static final int RENEW_INDEX = 5;
 }
