--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/util/JSActionType.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/util/JSActionType.vm
@@ -9,5 +9,6 @@ public val ADD : Int = 1;
 public val REMOVE : Int = 2;
 public val ADD_ALL : Int = 3;
 public val REMOVE_ALL : Int = 4;
+public val RENEW_INDEX : Int = 5;
 
 }
