--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
@@ -35,7 +35,7 @@ fun metaClassName() : String
 
 fun reflexiveMutator(mutatorType : Int, refName : String, value : Any?)
 
-    fun containedElementsArray() : Array<Any?>
+    fun containedElementsList() : List<Any>
 #if(${ctx.jS})
 #else
     fun containedElements() : Iterable<${packElem}.${formatedFactoryName}>
